# terminal_playing_cards

./: .coveragerc  .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
.circleci/: config.yml
TerminalPlayingCards/: __main__.py  card.py  cards.py  cards_config.py  config.py  deck.py  utils.py  view.py
docs/source/: conf.py  index.rst  modules.rst  terminal_playing_cards.rst
playing_cards_terminal/: __main__.py
terminal_playing_cards/: __init__.py  __main__.py  card.py  config.py  deck.py  utils.py  view.py
tests/: test_card.py  test_cards.py  test_deck.py  test_view.py
