[tool.poetry]
name = "terminal_playing_cards"
version = "0.1.0"
description = "Create card games for the terminal"
readme = "README.md"
repository = "https://github.com/pwildenhain/terminal_playing_cards"
keywords = ["cards"]
authors = ["Paul Wildenhain <pwildenhain@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
colorama = "^0.4.1"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pylint = "^2.3"
pytest = "^5.1"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
